--- a/index.html
+++ b/index.html
@@ -30,25 +30,75 @@
         </div>
 
         <div class="flex">
-            <img class="postzegel" src="assets/cacao.png" alt="cacao project">
-            <img class="postzegel" src="assets/doodlecode.png" alt="doodlecode project">
-            <img class="postzegel" src="assets/storytree.png" alt="storytree project">
-            <img class="postzegel" src="assets/persoonlijk.png" alt="persoonlijke projecten">
+            <img class="postzegel" data-modal="cacao" src="assets/cacao.png" alt="cacao project">
+            <img class="postzegel" data-modal="doodlecode" src="assets/doodlecode.png" alt="doodlecode project">
+            <img class="postzegel" data-modal="mycelium" src="assets/mycelium.png" alt="genart project">
+            <img class="postzegel" data-modal="persoonlijk" src="assets/persoonlijk.png" alt="persoonlijke projecten">
             <h1 class="titel">projecten</h1>
         </div>
 
-        <div class="flex footer">
+        <div id="footer" class="flex footer">
             <h1 class="titel">contact</h1>
-                <a href="mailto:wijnanshanice@gmail.com">wijnanshanice@gmail.com</a>
-                <a href="https://www.linkedin.com/in/shanice-wijnans-453202232/" target="_blank">
-                    <img class="logo" src="assets/linkedin.png" alt="linkedin logo">
+            <a href="mailto:wijnanshanice@gmail.com">wijnanshanice@gmail.com</a>
+            <a href="https://www.linkedin.com/in/shanice-wijnans-453202232/" target="_blank">
+                <img class="logo" src="assets/linkedin.png" alt="linkedin logo">
             </a>
         </div>
 
-        <dialog>
-            <img src="assets/kaart3.png" alt="kaart met skills">
+        <dialog class="cacao">
+            <!-- <img class="close" src="assets/kruisje.svg" alt="kruisje"> -->
+            <img class="envelop" src="assets/envelop.png" alt="envelop">
+            <img class="postzegelNieuw" src="assets/cacao.png" alt="cacao project">
+            <p>In samenwerking met het CBS heb ik in teamverband gewerkt aan De Cacao Catastrofe: een multimedia story
+                over cacaoboeren in Ivoorkust. Bij deze multimedia story ben ik hoofdverantwoordelijke geweest voor het
+                algemeen design van de story en development.</p>
+            <h2 class="date">februari, 2025</h2>
+            <h2 class="program">Figma, HTML, CSS, JavaScript</h2>
+            <a href="https://mia-mms-2425.github.io/team03/">decacaocatastrofe.nl</a>
+            <img class="dialogImg img1" src="assets/cacao1.png" alt="cacao project">
+            <img class="dialogImg img2" src="assets/cacao2.png" alt="cacao project">
+        </dialog>
+        <dialog class="doodlecode">
+            <img class="envelop" src="assets/envelop.png" alt="envelop">
+            <img class="postzegelNieuw" src="assets/doodlecode.png" alt="doodlecode project">
+            <p>In samenwerking met lokale middelbare scholen is DoodleCode ontstaan: een creatieve codeerworkshop voor
+                kinderen en jongeren tot 16 jaar waarbij ze de basis van de Javascript library P5 krijgen uitgelegd.
+                Binnen dit project heb ik bijgedragen aan de huisstijl, web design, de inhoud van de workshops
+                en was ik hoofdverantwoordelijke voor development van de website.</p>
+            <h2 class="date">juli, 2024</h2>
+            <h2 class="program">Adobe Illustrator, Figma, HTML, CSS, JavaScript</h2>
+            <a href="https://doodlecode.nl/">doodlecode.nl</a>
+            <img class="dialogImg img1" src="assets/doodlecodeLogo.png" alt="doodlecode logo">
+            <img class="dialogImg img2" src="assets/doodlecodeWorkshop.png" alt="doodlecode werkboekje">
+        </dialog>
+        <dialog class="mycelium">
+            <img class="envelop" src="assets/envelop.png" alt="envelop">
+            <img class="postzegelNieuw" src="assets/mycelium.png" alt="genart project">
+            <p>In samenwerking met Ananya Samyt, alumni van het Conservatorium in Maastricht
+                heb ik aan Mycelium gewerkt: een generative art performance, waarbij muziek en creative code bij elkaar
+                komen. Mycelium vertelt het verhaal van funghi in de natuur en hoe de natuur doormiddel van deze funghi
+                bloeit. </p>
+            <h2 class="date">april, 2024</h2>
+            <h2 class="program">Arduino, Processing, Javascript, p5.js</h2>
+            <a href="">Mycelium (OpenProcessing)</a>
+            <img class="dialogImg img1" src="assets/mycelium1.png" alt="mycelium project">
+            <img class="dialogImg img2" src="assets/mycelium3.png" alt="mycelium project">
+        </dialog>
+        <dialog class="persoonlijk">
+            <img class="envelop" src="assets/envelop.png" alt="envelop">
+            <img class="postzegelNieuw" src="assets/persoonlijk.png" alt="persoonlijke projecten">
+            <p>Naast projecten voor een opdrachtgever werk ik ook aan persoonlijke projecten. Hieronder een
+                aantal projecten waar ik aan heb gewerkt.</p>
+            </p>
+            <h3 class="h3Cafe">Branding voor een fictief cafe</h3>
+            <h2 class="h2Cafe">Adobe Illustrator, Adobe Photoshop</h2>
+            <img class="dialogImg img1" src="assets/ujuo.png" alt="ujuo project">
+            <h3 class="h3Blender">Blender animatie</h3>
+            <h2 class="h2Blender">Blender</h2>
+            <img class="dialogImg img2" src="assets/comingsoon1.png" alt="coming soon project">
         </dialog>
     </main>
+
     <div class="small">
         <p>Deze website is te bekijken op schermen groter dan 768px.</p>
     </div>
