--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 algemeen design van de story en development.</p>
             <h2 class="date">februari, 2025</h2>
             <h2 class="program">Figma, HTML, CSS, JavaScript</h2>
-            <a href="https://mia-mms-2425.github.io/team03/">decacaocatastrofe.nl</a>
+            <a href="decacaocatastrofe.nl">decacaocatastrofe.nl</a>
             <img class="dialogImg img1" src="assets/cacao1.png" alt="cacao project">
             <img class="dialogImg img2" src="assets/cacao2.png" alt="cacao project">
         </dialog>
