--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </head>
 
 <body>
@@ -80,9 +81,9 @@
                 bloeit. </p>
             <h2 class="date">april, 2024</h2>
             <h2 class="program">Arduino, Processing, Javascript, p5.js</h2>
-            <a href="">Mycelium (OpenProcessing)</a>
-            <img class="dialogImg img1" src="assets/mycelium1.png" alt="mycelium project">
-            <img class="dialogImg img2" src="assets/mycelium3.png" alt="mycelium project">
+            <video src="assets/video.webm"></video>
+            <img class="play" src="assets/playBtn.svg" alt="play button">
+            <img class="fullscreen" src="assets/fullscreenBtn.svg" alt="fullscreen button">
         </dialog>
         <dialog class="persoonlijk">
             <img class="envelop" src="assets/envelop.png" alt="envelop">
