--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <img class="envelop" src="assets/envelop.png" alt="envelop">
             <img class="postzegelNieuw" src="assets/cacao.png" alt="cacao project">
             <p>In samenwerking met het CBS heb ik in teamverband gewerkt aan De Cacao Catastrofe: een multimedia story
-                over cacaoboeren in Ivoorkust. Bij deze multimedia story ben ik hoofdverantwoordelijke geweest voor het
-                algemeen design van de story en development.</p>
+                over cacaoboeren in Ivoorkust. Bij deze multimedia story ben ik hoofdverantwoordelijke geweest voor development van de website
+                en heb ik daarnaast gewerkt aan het verloop van het verhaal (storytelling) en design van de website.</p>
             <h2 class="date">februari, 2025</h2>
             <h2 class="program">Figma, HTML, CSS, JavaScript</h2>
             <a href="decacaocatastrofe.nl">decacaocatastrofe.nl</a>
