--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <img class="postzegel" data-modal="cacao" src="assets/cacao.png" alt="cacao project">
             <img class="postzegel" data-modal="doodlecode" src="assets/doodlecode.png" alt="doodlecode project">
             <img class="postzegel" data-modal="mycelium" src="assets/mycelium.png" alt="genart project">
+            <img class="postzegel" data-modal="storytree" src="assets/storytree.png" alt="storytree project">
             <img class="postzegel" data-modal="persoonlijk" src="assets/persoonlijk.png" alt="persoonlijke projecten">
             <h1 class="titel">projecten</h1>
         </div>
@@ -47,11 +48,11 @@
         </div>
 
         <dialog class="cacao">
-            <!-- <img class="close" src="assets/kruisje.svg" alt="kruisje"> -->
             <img class="envelop" src="assets/envelop.png" alt="envelop">
             <img class="postzegelNieuw" src="assets/cacao.png" alt="cacao project">
             <p>In samenwerking met het CBS heb ik in teamverband gewerkt aan De Cacao Catastrofe: een multimedia story
-                over cacaoboeren in Ivoorkust. Bij deze multimedia story ben ik hoofdverantwoordelijke geweest voor development van de website
+                over cacaoboeren in Ivoorkust. Bij deze multimedia story ben ik hoofdverantwoordelijke geweest voor
+                development van de website
                 en heb ik daarnaast gewerkt aan het verloop van het verhaal (storytelling) en design van de website.</p>
             <h2 class="date">februari, 2025</h2>
             <h2 class="program">Figma, HTML, CSS, JavaScript</h2>
@@ -70,7 +71,7 @@
             <h2 class="program">Adobe Illustrator, Figma, HTML, CSS, JavaScript</h2>
             <a href="https://doodlecode.nl/">doodlecode.nl</a>
             <img class="dialogImg img1" src="assets/doodlecodeLogo.png" alt="doodlecode logo">
-            <img class="dialogImg img2" src="assets/doodlecodeWorkshop.png" alt="doodlecode werkboekje">
+            <img class="dialogImg img2 poster" src="assets/doodlecodeWorkshop.png" alt="doodlecode werkboekje">
         </dialog>
         <dialog class="mycelium">
             <img class="envelop" src="assets/envelop.png" alt="envelop">
@@ -85,18 +86,66 @@
             <img class="play" src="assets/playBtn.svg" alt="play button">
             <img class="fullscreen" src="assets/fullscreenBtn.svg" alt="fullscreen button">
         </dialog>
-        <dialog class="persoonlijk">
+        <dialog class="storytree">
             <img class="envelop" src="assets/envelop.png" alt="envelop">
-            <img class="postzegelNieuw" src="assets/persoonlijk.png" alt="persoonlijke projecten">
-            <p>Naast projecten voor een opdrachtgever werk ik ook aan persoonlijke projecten. Hieronder een
-                aantal projecten waar ik aan heb gewerkt.</p>
-            </p>
-            <h3 class="h3Cafe">Branding voor een fictief cafe</h3>
-            <h2 class="h2Cafe">Adobe Illustrator, Adobe Photoshop</h2>
-            <img class="dialogImg img1" src="assets/ujuo.png" alt="ujuo project">
-            <h3 class="h3Blender">Blender animatie</h3>
-            <h2 class="h2Blender">Blender</h2>
-            <img class="dialogImg img2" src="assets/comingsoon1.png" alt="coming soon project">
+            <img class="postzegelNieuw" src="assets/storytree.png" alt="storytree project">
+            <p>In samenwerking met Cubiss heb ik in duo's gewerkt aan StoryTree: een concept waarbij
+                jongeren gestimuleerd worden om weer meer te gaan lezen. Het doel hiervan was om
+                een low fidelity prototype te maken van een app en daarbij een passende branding
+                en marketing te ontwikkelen. In deze app kunnen jongeren doormiddel van een chatbot
+                hun eigen weg in een verhaal kiezen en kunnen ze de verschillende uitkomsten met elkaar delen.</p>
+            <h2 class="date">februari, 2024</h2>
+            <h2 class="program">Adobe Illustrator, Figma, Adobe inDesign</h2>
+            <a
+                href="https://www.figma.com/proto/x4serXYNg5JfAVhlVH3JO3/Prototype-app?page-id=0%3A1&node-id=1-2&p=f&viewport=-19%2C306%2C0.14&t=OXZK1uuKuwN0RSWj-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2&show-proto-sidebar=1">Figma
+                prototype</a>
+            <img class="dialogImg img1 poster" src="assets/poster.jpg" alt="storytree poster">
+            <img class="dialogImg img2 poster" src="assets/brochure.png" alt="storytree brochure">
+        </dialog>
+        <dialog class="persoonlijk">
+            <div class="scroll-container">
+                <div class="mograph envelop">
+                    <img class="envelop" src="assets/envelop.png" alt="envelop">
+                    <p>Ik heb recentelijk een passie gevonden voor 3D modeling en animatie. Ik ben hierbij
+                        echt nog in de beginfase, maar ik vind het leuk om te experimenteren met verschillende
+                        technieken en programma's. Ik heb een paar kleine projecten gemaakt in Blender en After Effects.
+                    </p>
+                    <div class="mographing">
+                        <video class="ball" src="assets/ball.webm"></video>
+                        <img class="play playBtn2" src="assets/playBtnBlack.svg" alt="play button">
+                        <img class="blender poster" src="assets/blender2.png" alt="blender model">
+                        <!-- <video></video>
+                    <img class="play playBtn3" src="assets/playBtnBlack.svg" alt="play button"> -->
+                    </div>
+                </div>
+                <div class="fotografie envelop">
+                    <img class="envelop" src="assets/envelop.png" alt="envelop">
+                    <img class="postzegelNieuw" src="assets/persoonlijk.png" alt="persoonlijke projecten">
+                    <p>Naast projecten voor een opdrachtgever werk ik ook aan persoonlijke projecten. Dit zijn
+                        een paar kleine dingen die mijn skills vooral laten zien. Het zijn geen grote projecten,
+                        maar ik vind het leuk om te experimenteren met verschillende technieken en programma's.</p>
+                    <div class="fotos">
+                        <img class="poster" src="assets/foto 1.jpg" alt="foto met vogels">
+                        <img class="poster" src="assets/foto 2.jpg" alt="foto van gebouw">
+                        <img class="poster" src="assets/foto 3.jpg" alt="foto van landschap met water">
+                        <img class="poster" src="assets/foto 4.jpg" alt="foto van landschap met bomen">
+                    </div>
+                </div>
+                <div class="graphic envelop">
+                    <img class="envelop" src="assets/envelop.png" alt="envelop">
+                    <p>Ik vind het leuk om op grafisch gebied bezig te zijn. Hieronder zie je 'ujuo', een
+                        branding voor een fictief cafe. Daarnaast heb ik ook een poster gemaakt voor een project waarmee
+                        ik op dit moment bezig ben. Dit is een project dat zich richt op de LGBTQ+ gemeenschap en
+                        de acceptatie van deze gemeenschap in Heerlen. Ik ben op dit moment bezig met het ontwikkelen
+                        van een
+                        magazine voor dit project.</p>
+                    <div class="graphics">
+                        <img class="poster" src="assets/lgbt.png" alt="lgbt poster">
+                        <img class="poster" src="assets/ujuo.jpg" alt="ujuo poster">
+                        <img class="brand" src="assets/ujuoBrand.jpg" alt="ujuo logo">
+                    </div>
+                </div>
+            </div>
         </dialog>
     </main>
 
