--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
                     <p>Ik heb recentelijk een passie gevonden voor 3D modeling en animatie. Ik ben hierbij
                         echt nog in de beginfase, maar ik vind het leuk om te experimenteren met verschillende
                         technieken en programma's. Ik heb een paar kleine projecten gemaakt in Blender en After Effects.
+                        Helaas
+                        kan ik niet veel van Blender laten zien, omdat mijn computer het op dit moment niet aan kan om
+                        dit te renderen.
                     </p>
                     <div class="mographing">
-                        <video class="ball" src="assets/ball.webm"></video>
-                        <img class="play playBtn2" src="assets/playBtnBlack.svg" alt="play button">
+                        <img class="ball" src="assets/ball.gif"></img>
                         <img class="blender poster" src="assets/blender2.png" alt="blender model">
-                        <!-- <video></video>
-                    <img class="play playBtn3" src="assets/playBtnBlack.svg" alt="play button"> -->
+                        <img class="walk" src="assets/walk cycle.gif"></img>
                     </div>
                 </div>
                 <div class="fotografie envelop">
