--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 en heb ik daarnaast gewerkt aan het verloop van het verhaal (storytelling) en design van de website.</p>
             <h2 class="date">februari, 2025</h2>
             <h2 class="program">Figma, HTML, CSS, JavaScript</h2>
-            <a href="decacaocatastrofe.nl">decacaocatastrofe.nl</a>
+            <a href="https://decacaocatastrofe.nl/">decacaocatastrofe.nl</a>
             <img class="dialogImg img1" src="assets/cacao1.png" alt="cacao project">
             <img class="dialogImg img2" src="assets/cacao2.png" alt="cacao project">
         </dialog>
